User header aligned in mosaics and namespaces. Some layout style fixed.

--- a/src/components/TableDisplay/TableDisplay.less
+++ b/src/components/TableDisplay/TableDisplay.less
@@ -135,6 +135,7 @@
         grid-template-rows: 100%;
         grid-template-columns: 100%;
 
+
         .table-title-container {
             padding-left: 0.2rem;
             padding-top: 0.1rem;
@@ -161,15 +162,23 @@
                         padding: 3px 5px 0px 4px;
                     }
                 }
+
+                .ivu-checkbox-wrapper {
+                    margin-top: 0.08rem;
+                    margin-right: 0.2rem;
+                }
+
                 .ivu-icon-ios-sync {
                     margin-left: 0.2rem;
                     font-weight: 600;
+                    margin-top: 0.08rem;
+                    vertical-align: middle !important;
                     &:hover {
                         cursor: pointer;
                     }
                 }
                 .table-filter-item-container {
-                    margin: 0.07rem 0.2rem 0 0;
+
                 }
                 /deep/.ivu-select {
                     .ivu-select-selection {
@@ -354,3 +363,6 @@
         transform: rotateZ(360deg);
     }
 }
+
+
+
