--- a/src/views/layout/PageLayout/PageLayout.less
+++ b/src/views/layout/PageLayout/PageLayout.less
@@ -20,10 +20,9 @@
     height: calc(100% - 200px);
 }
 
-.logo-container {
-    width: 150px;
-    .logo-img {
-        width: 100%;
+/deep/ .logo-container {
+    img {
+        padding: 0.225rem !important;
     }
 }
 
