--- a/src/views/pages/dashboard/invoice/DashboardInvoicePage.less
+++ b/src/views/pages/dashboard/invoice/DashboardInvoicePage.less
@@ -114,7 +114,7 @@
         }
 
         /deep/.transaction-uri-display-row {
-            margin-top: 0.5rem;
+            margin-top: 0.25rem;
         }
     }
 }
